Fixed bugs for mobile design (scrolling bugs, overflow bugs, spacing bugs)

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -10,4 +10,12 @@
     font-size: 75%;
     font-weight: bold;
     color: white;
+    margin-bottom: 0;
+}
+
+@media screen and (min-width: 200px) and (max-width: 800px) {
+    #footer-container {
+        padding-top: 5%;
+        padding-bottom: 5%
+    }
 }
