--- a/public/css/sides.css
+++ b/public/css/sides.css
@@ -1,7 +1,7 @@
 /* STYLES FOR SIDES CATEGORY PAGE */
 #sides-container {
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 #sides-category-header {
@@ -26,7 +26,7 @@
 }
 
 .category-title {
-    font-size: 350%;
+    font-size: 300%;
     padding-bottom: 1%;
     text-align: center;
     position: relative;
@@ -44,9 +44,9 @@
 }
 
 #side-container {
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     height: 100vh !important;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 #side-title {
@@ -65,6 +65,7 @@
 }
 
 #sides-backlink {
+    padding-top: 5%;
     text-align: center;
     margin: auto;
     color: red;
@@ -101,6 +102,10 @@
         font-weight: bolder;
     }
 
+    #category-title {
+        font-size: 250%;
+    }
+
     #sides-category-header {
         display: none;
     }
@@ -117,4 +122,16 @@
         grid-gap: 10%;
     }
 
+    .side-item-title {
+        padding-top: 1%;
+        font-size: 210%;
+        line-height: 2em;
+    }
+
+}
+
+@media screen and (min-width: 801px) and (max-width: 990px) {
+    #category-title {
+        font-size: 450%;
+    }
 }
